objects/OSM_IntercompanyProcess__e.object
<CustomObject>
    <fields>
        <fullName>Event_Info__c</fullName>
        <label>Event Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Publisher__c</fullName>
        <label>Event Publisher</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesOrder_ID__c</fullName>
        <label>SalesOrder ID</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Valid_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Event</label>
        <type>Checkbox</type>
    </fields>
    <label>OSM_IntercompanyProcess</label>
    <pluralLabel>OSM_IntercompanyProcesses</pluralLabel>
</CustomObject>